<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/yourChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/your_choice"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rockImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/rock_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourChoice"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/paperImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/paper_image"
        app:layout_constraintEnd_toStartOf="@+id/scissorsImage"
        app:layout_constraintStart_toEndOf="@+id/rockImage"
        app:layout_constraintTop_toBottomOf="@+id/yourChoice"
        app:srcCompat="@drawable/paper" />

    <Button
        android:id="@+id/rockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="15dp"
        android:text="@string/Rock"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rockImage" />

    <Button
        android:id="@+id/scissorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/Scissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scissorsImage" />

    <Button
        android:id="@+id/paperButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Paper"
        app:layout_constraintEnd_toStartOf="@+id/scissorsButton"
        app:layout_constraintStart_toEndOf="@+id/rockButton"
        app:layout_constraintTop_toBottomOf="@+id/paperImage" />

    <ImageView
        android:id="@+id/user2Image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/com_res"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestTo"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/user1Image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_res"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestTo"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="0 - 0"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/secondPlayer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstPlayer"
        app:layout_constraintTop_toBottomOf="@+id/user1Image" />

    <TextView
        android:id="@+id/firstPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/You"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user1Image"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/secondPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/Computer"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user2Image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/bestTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="Results"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paperButton" />

    <ImageView
        android:id="@+id/scissorsImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/scissors_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourChoice"
        app:srcCompat="@drawable/scissors" />

</androidx.constraintlayout.widget.ConstraintLayout>